--- a/public/home.css
+++ b/public/home.css
@@ -88,6 +88,12 @@ body{
     flex-direction: column;
     margin-left: 5%;
     width: 600px;
+    max-height: 100vh;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px; 
 }
 
 .userlogo{
